overflow fix

--- a/styles/adaptive.css
+++ b/styles/adaptive.css
@@ -468,9 +468,9 @@
     .hero .search-bar{
         margin-bottom: 0.5rem;
     }
-    .hero .gallery{
+    /* .hero .gallery{
         margin-top: 1rem;
-    }
+    } */
     .hero .slider.mobile{
         width: 100%;
     }
