--- a/styles/style.css
+++ b/styles/style.css
@@ -1400,6 +1400,7 @@ box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.15);
 /* Main section */
 .main section{
     margin-bottom: 80px;
+    overflow: hidden;
 }
 .main section:last-child{
     margin-bottom: 0;
@@ -1901,6 +1902,8 @@ flex-shrink: 0;
     /* max-width: 792px; */
     position: relative;
     display: flex;
+    border-radius: 1rem;
+    overflow: hidden;
     width: max-content;
     /* background-color: var(--theme-color); */
 }
